added course links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 
-	Test
+	<h1>Courses:</h1>
+	<a href="http://www.cs.toronto.edu/~arnold/409/19f/index.shtml">CSC409 - Arnold</a>
+	<a href="http://www.math.toronto.edu/ilia/Teaching/MAT406.2019/index.html">MAT406 - Ilia</a>
+
 
 </body>
 </html>
