--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="common.css">
 	<link id="pagestyle" rel="stylesheet" type="text/css" href="dark.css">
 	<title>My Course Links</title>
