added stats link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<a href="http://www.math.toronto.edu/ilia/Teaching/MAT406.2019/index.html" target="_blank">MAT406 - Ilia</a>
 		<span>http://www.math.toronto.edu/ilia/Teaching/MAT406.2019/index.html</span>
 		<br><br>
+		<a href="http://www.utstat.toronto.edu/~brunner/256f19/" target="_blank">STA256 - Jerry</a>
+		<span>http://www.utstat.toronto.edu/~brunner/256f19/MAT406.2019/index.html</span>
+		<br><br>
 		<button id="studentLinkButton" type="button">Student page</button>
 		<span>https://cslinux.utm.utoronto.ca/~<input id="studentLink" type="text" value="atzorija" /></span>
 	</div>
