--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
 	    </right>
     	
 		<h1>Course Links:</h1>
-		<a href="http://www.cs.toronto.edu/~arnold/409/19f/index.shtml" target="_blank">CSC409 - Arnold</a>
-		<span>http://www.cs.toronto.edu/~arnold/409/19f/index.shtml</span>
+		<a href="http://www.cs.toronto.edu/~lczhang/321/" target="_blank">CSC321 - Lisa</a>
+		<span>http://www.cs.toronto.edu/~lczhang/321/</span>
 		<br><br>
-		<a href="http://www.math.toronto.edu/ilia/Teaching/MAT406.2019/index.html" target="_blank">MAT406 - Ilia</a>
-		<span>http://www.math.toronto.edu/ilia/Teaching/MAT406.2019/index.html</span>
-		<br><br>
-		<a href="http://www.utstat.toronto.edu/~brunner/256f19/" target="_blank">STA256 - Jerry</a>
-		<span>http://www.utstat.toronto.edu/~brunner/256f19/MAT406.2019/index.html</span>
+		<a href="https://mcsapps.utm.utoronto.ca/mat402_wiki/index.php" target="_blank">MAT402 - Parker</a>
+		<span>https://mcsapps.utm.utoronto.ca/mat402_wiki/index.php</span>
 		<br><br>
 		<button id="studentLinkButton" type="button">Student page</button>
 		<span>https://cslinux.utm.utoronto.ca/~<input id="studentLink" type="text" value="atzorija" /></span>
