--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     	
 		<h1>Course Links:</h1>
 		<a href="http://www.cs.toronto.edu/~lczhang/321/" target="_blank">CSC321 - Lisa</a>
-		<span>http://www.cs.toronto.edu/~lczhang/321/</span>
+		<span>http://cs.toronto.edu/~lczhang/321/</span>
+		<br><br>
+		<a href="https://mcs.utm.utoronto.ca/~358/" target="_blank">CSC358 - Larry/Luit</a>
+		<span>https://mcs.utm.utoronto.ca/~358/</span>
 		<br><br>
 		<a href="https://mcsapps.utm.utoronto.ca/mat402_wiki/index.php" target="_blank">MAT402 - Parker</a>
 		<span>https://mcsapps.utm.utoronto.ca/mat402_wiki/index.php</span>
