--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	function addLink(){
 		const linkUrl = $("#newLink").val();
 		const linkName = $("#newLinkName").val();
-		$.get(`https://cslinux.utm.utoronto.ca/~atzorija/api/addLink.php?link=${linkUrl}&name=${linkName}`, function(data){
+		$.get(`https://cslinux.utm.utoronto.ca/~atzorija/api/addlink.php?link=${linkUrl}&name=${linkName}`, function(data){
 			$("#customlinks").append(`<a href="${linkUrl}" target="_blank">${name}</a>
 				<span>${linkName}</span>
 				<br><br>`);
