--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<br><br>
 		<customlinks id="customlinks"></customlinks>
 		<formz>
-		  Link: <input id="newLink" type="text" size="50" name="firstname" value="https://wwww.google.ca">
+		  Link: <input id="newLink" type="text" size="50" name="firstname" value="https://www.google.ca">
 		  Name: <input id="newLinkName" type="text" name="lastname" value="google">
 		  <button id="linkAdd" onclick="addLink()">Add</button>
 		</formz>
