--- a/secret-santa.html
+++ b/secret-santa.html
@@ -23,11 +23,11 @@
         const name = document.getElementById('name').value;
         const password = document.getElementById('password').value;
 
-        if(name.toLower() === "jacob" && password === "1"){
+        if(name.toLowerCase() === "jacob" && password === "1"){
           fetch('./choices.json')
             .then((response) => response.json())
             .then((allChoices) => {
-              const choices = allChoices[name.toLower()];
+              const choices = allChoices[name.toLowerCase()];
               document.getElementById('recipientsWrapper').style = "";
               document.getElementById('recipient1').value = choices[0];
               document.getElementById('recipient2').value = choices[1];
