--- a/secret-santa.html
+++ b/secret-santa.html
@@ -29,8 +29,8 @@
             .then((allChoices) => {
               const choices = allChoices[name.toLowerCase()];
               document.getElementById('recipientsWrapper').style = "";
-              document.getElementById('recipient1').value = choices[0];
-              document.getElementById('recipient2').value = choices[1];
+              document.getElementById('recipient1').innerHtml = choices[0];
+              document.getElementById('recipient2').innerHtml = choices[1];
             });
         }
       }
