--- a/secret-santa.html
+++ b/secret-santa.html
@@ -23,14 +23,19 @@
         const name = document.getElementById('name').value;
         const password = document.getElementById('password').value;
 
-        if(name.toLowerCase() === "jacob" && password === "1"){
+        passwords = {
+          "jacob": "1",
+          "meghan": "2"
+        }
+
+        if(name.toLowerCase() in passwords && password === passwords[name.toLowerCase()]){
           fetch('./choices.json')
             .then((response) => response.json())
             .then((allChoices) => {
               const choices = allChoices[name.toLowerCase()];
               document.getElementById('recipientsWrapper').style = "";
-              document.getElementById('recipient1').innerHtml = choices[0];
-              document.getElementById('recipient2').innerHtml = choices[1];
+              document.getElementById('recipient1').innerHTML = choices[0];
+              document.getElementById('recipient2').innerHTML = choices[1];
             });
         }
       }
