--- a/secret-santa.html
+++ b/secret-santa.html
@@ -24,8 +24,13 @@
         const password = document.getElementById('password').value;
 
         passwords = {
-          "jacob": "1",
-          "meghan": "2"
+          "jacob": "jaguar40",
+          "meghan": "lemur25",
+          "jon": "coyote81",
+          "joey": "hamster40",
+          "patty": "fox77",
+          "ann": "frog30",
+          "frank": "rooster16",
         }
 
         if(name.toLowerCase() in passwords && password === passwords[name.toLowerCase()]){
