--- a/secret-santa.html
+++ b/secret-santa.html
@@ -1,25 +1,37 @@
 <html>
-  <body>
+  <body style="margin-left: 30%; margin-right: 30%; margin-top: 10%; font-size: 16px;">
+    <h1>
+      Secret Santa 2024
+    </h1>
+    
     <div>
-      <label>Name</label>
-      <input id="name" type="textbox" name="" >
-    </div>
-    <div>
-      <label>Password</label>
-      <input id="password" type="textbox" name="" >
-    </div>
-    <div>
-      <input type="button" value="Go" onclick="Go()" >
-    </div>
+      <div>
+        <label style="width: 80px; display: inline-block;">Name</label>
+        <input id="name" type="textbox" name="" >
+      </div>
+      <div>
+        <label style="width: 80px; display: inline-block;">Password</label>
+        <input id="password" type="textbox" name="" >
+      </div>
+      <div style="margin: 15px; margin-left: 20px">
+        <input type="button" value="Go" onclick="Go()" >
+      </div>
 
-    <div id="recipientsWrapper" style="display: none;">
-      Your secret santa recipients:
-      <div id="recipient1" ></div>
-      <div id="recipient2" ></div>
+      <div id="errorDiv" style="display: none;">
+        Wrong name/password
+      </div>
+
+      <div id="recipientsWrapper" style="display: none;">
+        Your secret santa recipients:
+        <div id="recipient1" ></div>
+        <div id="recipient2" ></div>
+      </div>
     </div>
 
     <script type="text/javascript">
       function Go() {
+        document.getElementById('errorDiv').style = "display: none;";
+
         const name = document.getElementById('name').value;
         const password = document.getElementById('password').value;
 
@@ -42,6 +54,8 @@
               document.getElementById('recipient1').innerHTML = choices[0];
               document.getElementById('recipient2').innerHTML = choices[1];
             });
+        } else {
+          document.getElementById('errorDiv').style = "color: red;";
         }
       }
     </script>
