--- a/secret-santa.html
+++ b/secret-santa.html
@@ -1,8 +1,21 @@
-<html>
-  <body style="margin-left: 30%; margin-right: 30%; margin-top: 10%; font-size: 16px;">
+<html style="background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg'); background-size: cover;">
+  <body style="margin-left: 25%; margin-right: 25%; margin-top: 10%; font-size: 16px;">
     <h1>
       Secret Santa 2024
     </h1>
+
+    <h3>Participents:</h3>
+    <ul>
+      <li>Jacob</li>
+      <li>Meghan</li>
+      <li>Jon</li>
+      <li>Joey</li>
+      <li>Patty</li>
+      <li>Frank</li>
+      <li>Ann</li>
+    </ul>  
+
+    <h3>Find out who you are buying for</h3>
     
     <div>
       <div>
@@ -22,9 +35,9 @@
       </div>
 
       <div id="recipientsWrapper" style="display: none;">
-        Your secret santa recipients:
-        <div id="recipient1" ></div>
-        <div id="recipient2" ></div>
+        You will buy gifts for:
+        <div style="font-weight: bold;" id="recipient1" ></div>
+        <div style="font-weight: bold;" id="recipient2" ></div>
       </div>
     </div>
 
@@ -50,9 +63,11 @@
             .then((response) => response.json())
             .then((allChoices) => {
               const choices = allChoices[name.toLowerCase()];
+              const name1 = choices[0];
+              const name2 = choices[1];
               document.getElementById('recipientsWrapper').style = "";
-              document.getElementById('recipient1').innerHTML = choices[0];
-              document.getElementById('recipient2').innerHTML = choices[1];
+              document.getElementById('recipient1').innerHTML = name1.charAt(0).toUpperCase() + name1.slice(1);
+              document.getElementById('recipient2').innerHTML = name2.charAt(0).toUpperCase() + name2.slice(1);
             });
         } else {
           document.getElementById('errorDiv').style = "color: red;";
