--- a/secret-santa.html
+++ b/secret-santa.html
@@ -1,45 +1,87 @@
-<html style="background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg'); background-size: cover;">
-  <body style="margin-left: 25%; margin-right: 25%; margin-top: 10%; font-size: 16px;">
-    <h1>
-      Secret Santa 2024
-    </h1>
+<html style="background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg'); background-size: cover; margin-bottom: 100px; height: 100%;">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body {
+        display: flex; 
+        justify-content: center; 
+        margin-top: 3%;
+        height: 100%;
+      }
+      .content {
+        flex: 6; 
+        max-width: 300px;
+      }
+      .buffer {
+        flex:  1;
+      }
+      .textbox {
+        height: 25px; width: 150px; border-radius: 6px;
+      }
+      .button {
+        height: 40px; width: 80px; border-radius: 8px;
+      }
+      label {
+        width: 80px; display: inline-block;
+      }
+      .buttonWrapper {
+        margin: 15px; margin-left: 20px
+      }
+      .bold {
+        margin: 3px;
+        font-weight: bold;
+      }
+      .inputWrapper {
+        margin: 4px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="buffer"></div>
+    <div class="content">
+      <h1>
+        Secret Santa 2024
+      </h1>
 
-    <h3>Participents:</h3>
-    <ul>
-      <li>Jacob</li>
-      <li>Meghan</li>
-      <li>Jon</li>
-      <li>Joey</li>
-      <li>Patty</li>
-      <li>Frank</li>
-      <li>Ann</li>
-    </ul>  
+      <h3>Participents:</h3>
+      <ul>
+        <li>Jacob</li>
+        <li>Meghan</li>
+        <li>Jon</li>
+        <li>Joey</li>
+        <li>Patty</li>
+        <li>Frank</li>
+        <li>Ann</li>
+      </ul>  
 
-    <h3>Find out who you are buying for</h3>
-    
-    <div>
+      <h3>Find out who you are buying for</h3>
+      
       <div>
-        <label style="width: 80px; display: inline-block;">Name</label>
-        <input id="name" type="textbox" name="" >
-      </div>
-      <div>
-        <label style="width: 80px; display: inline-block;">Password</label>
-        <input id="password" type="textbox" name="" >
-      </div>
-      <div style="margin: 15px; margin-left: 20px">
-        <input type="button" value="Go" onclick="Go()" >
-      </div>
+        <div class="inputWrapper">
+          <label>Name</label>
+          <input class="textbox" id="name" type="textbox" name="" >
+        </div>
+        <div class="inputWrapper">
+          <label>Password</label>
+          <input class="textbox"  id="password" type="textbox" name="" >
+        </div>
+        <div class="buttonWrapper">
+          <input class="button" type="button" value="Go" onclick="Go()" >
+        </div>
 
-      <div id="errorDiv" style="display: none;">
-        Wrong name/password
-      </div>
+        <div id="errorDiv" style="display: none;">
+          Wrong name/password
+        </div>
 
-      <div id="recipientsWrapper" style="display: none;">
-        You will buy gifts for:
-        <div style="font-weight: bold;" id="recipient1" ></div>
-        <div style="font-weight: bold;" id="recipient2" ></div>
+        <div id="recipientsWrapper" style="display: none;">
+          You will buy gifts for:
+          <div class="bold" id="recipient1" ></div>
+          <div class="bold" id="recipient2" ></div>
+        </div>
       </div>
     </div>
+
+    <div class="buffer"></div>
 
     <script type="text/javascript">
       function Go() {
@@ -59,16 +101,16 @@
         }
 
         if(name.toLowerCase() in passwords && password === passwords[name.toLowerCase()]){
-          fetch('./choices.json')
-            .then((response) => response.json())
-            .then((allChoices) => {
-              const choices = allChoices[name.toLowerCase()];
-              const name1 = choices[0];
-              const name2 = choices[1];
+          // fetch('./choices.json')
+          //   .then((response) => response.json())
+          //   .then((allChoices) => {
+          //     const choices = allChoices[name.toLowerCase()];
+              const name1 = "choices[0]";
+              const name2 = "choices[1]";
               document.getElementById('recipientsWrapper').style = "";
               document.getElementById('recipient1').innerHTML = name1.charAt(0).toUpperCase() + name1.slice(1);
               document.getElementById('recipient2').innerHTML = name2.charAt(0).toUpperCase() + name2.slice(1);
-            });
+            // });
         } else {
           document.getElementById('errorDiv').style = "color: red;";
         }
