--- a/secret-santa.html
+++ b/secret-santa.html
@@ -1,12 +1,12 @@
-<html style="background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg'); background-size: cover; margin-bottom: 100px; height: 100%;">
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
+        background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg');
+        background-size: auto;
         display: flex; 
-        justify-content: center; 
-        margin-top: 3%;
-        height: 100%;
+        justify-content: center;
       }
       .content {
         flex: 6; 
@@ -33,6 +33,12 @@
       }
       .inputWrapper {
         margin: 4px;
+      }
+
+      @media only screen and (max-width: 550px) {
+        body {
+          background-position: 70%;
+        }
       }
     </style>
   </head>
