--- a/secret-santa.html
+++ b/secret-santa.html
@@ -5,6 +5,7 @@
       body {
         background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg');
         background-size: auto;
+        background-position: 70%;
         display: flex; 
         justify-content: center;
       }
@@ -35,11 +36,7 @@
         margin: 4px;
       }
 
-      @media only screen and (max-width: 550px) {
-        body {
-          background-position: 70%;
-        }
-      }
+      @media only screen and (max-width: 550px) {}
     </style>
   </head>
   <body>
@@ -107,16 +104,16 @@
         }
 
         if(name.toLowerCase() in passwords && password === passwords[name.toLowerCase()]){
-          // fetch('./choices.json')
-          //   .then((response) => response.json())
-          //   .then((allChoices) => {
-          //     const choices = allChoices[name.toLowerCase()];
-              const name1 = "choices[0]";
-              const name2 = "choices[1]";
+          fetch('./choices.json')
+            .then((response) => response.json())
+            .then((allChoices) => {
+              const choices = allChoices[name.toLowerCase()];
+              const name1 = choices[0];
+              const name2 = choices[1];
               document.getElementById('recipientsWrapper').style = "";
               document.getElementById('recipient1').innerHTML = name1.charAt(0).toUpperCase() + name1.slice(1);
               document.getElementById('recipient2').innerHTML = name2.charAt(0).toUpperCase() + name2.slice(1);
-            // });
+            });
         } else {
           document.getElementById('errorDiv').style = "color: red;";
         }
