--- a/secret-santa.html
+++ b/secret-santa.html
@@ -62,11 +62,11 @@
       <div>
         <div class="inputWrapper">
           <label>Name</label>
-          <input class="textbox" id="name" type="textbox" name="" >
+          <input class="textbox" id="name" type="text" name="" >
         </div>
         <div class="inputWrapper">
           <label>Password</label>
-          <input class="textbox"  id="password" type="textbox" name="" >
+          <input class="textbox"  id="password" type="text" autocorrect="off" autocapitalize="off" name="" >
         </div>
         <div class="buttonWrapper">
           <input class="button" type="button" value="Go" onclick="Go()" >
