--- a/secret-santa.html
+++ b/secret-santa.html
@@ -87,6 +87,10 @@
     <div class="buffer"></div>
 
     <script type="text/javascript">
+      function Capitalize(s){
+        return s.charAt(0).toUpperCase() + s.slice(1);
+      }
+
       function Go() {
         document.getElementById('errorDiv').style = "display: none;";
 
@@ -110,9 +114,25 @@
               const choices = allChoices[name.toLowerCase()];
               const name1 = choices[0];
               const name2 = choices[1];
+              let otherBuyerForName1 = "Nobody";
+              let otherBuyerForName2 = "Nobody";
+
+              for(let buyer in allChoices){
+                if(buyer === name){
+                  continue;
+                }
+                const buyees = allChoices[buyer];
+                if(buyees.includes(name1)){
+                  otherBuyerForName1 = buyer;
+                }
+                if(buyees.includes(name2)){
+                  otherBuyerForName2 = buyer;
+                }
+              }
+
               document.getElementById('recipientsWrapper').style = "";
-              document.getElementById('recipient1').innerHTML = name1.charAt(0).toUpperCase() + name1.slice(1);
-              document.getElementById('recipient2').innerHTML = name2.charAt(0).toUpperCase() + name2.slice(1);
+              document.getElementById('recipient1').innerHTML = Capitalize(name1) + "  ("+Capitalize(otherBuyerForName1) + " also has this name)";
+              document.getElementById('recipient2').innerHTML = Capitalize(name2) + "  (" + Capitalize(otherBuyerForName2) + " also has this name)";
             });
         } else {
           document.getElementById('errorDiv').style = "color: red;";
