--- a/secret-santa.html
+++ b/secret-santa.html
@@ -97,6 +97,8 @@
         const name = document.getElementById('name').value;
         const password = document.getElementById('password').value;
 
+        const nameCorrected = name.toLowerCase();
+
         passwords = {
           "jacob": "jaguar40",
           "meghan": "lemur25",
@@ -107,18 +109,18 @@
           "frank": "rooster16",
         }
 
-        if(name.toLowerCase() in passwords && password === passwords[name.toLowerCase()]){
+        if(nameCorrected in passwords && password === passwords[nameCorrected]){
           fetch('./choices.json')
             .then((response) => response.json())
             .then((allChoices) => {
-              const choices = allChoices[name.toLowerCase()];
+              const choices = allChoices[nameCorrected];
               const name1 = choices[0];
               const name2 = choices[1];
               let otherBuyerForName1 = "Nobody";
               let otherBuyerForName2 = "Nobody";
 
               for(let buyer in allChoices){
-                if(buyer === name){
+                if(buyer === nameCorrected){
                   continue;
                 }
                 const buyees = allChoices[buyer];
