--- a/secret-santa.html
+++ b/secret-santa.html
@@ -4,7 +4,8 @@
     <style>
       body {
         background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg');
-        background-size: auto;
+        background-size: cover;
+        background-repeat: no-repeat;
         background-position: 70%;
         display: flex; 
         justify-content: center;
