--- a/secret-santa.html
+++ b/secret-santa.html
@@ -4,11 +4,11 @@
     <style>
       body {
         background-image: url('https://cdn.pixabay.com/photo/2022/11/07/17/41/christmas-trees-7576912_640.jpg');
-        background-size: cover;
         background-repeat: no-repeat;
-        background-position: 70%;
+        background-position: 50% top;
         display: flex; 
         justify-content: center;
+        background-color: #97bab4;
       }
       .content {
         flex: 6; 
@@ -36,8 +36,15 @@
       .inputWrapper {
         margin: 4px;
       }
+      .textOnImg {
+        background-color: #97bab4;
+        width: fit-content;
+      }
 
-      @media only screen and (max-width: 550px) {}
+      @media only screen and (min-width: 1550px) {
+        body {
+        }
+      }
     </style>
   </head>
   <body>
@@ -77,7 +84,7 @@
           Wrong name/password
         </div>
 
-        <div id="recipientsWrapper" style="display: none;">
+        <div class="textOnImg" id="recipientsWrapper" style="display: none;">
           You will buy gifts for:
           <div class="bold" id="recipient1" ></div>
           <div class="bold" id="recipient2" ></div>
