--- a/secret-santa.html
+++ b/secret-santa.html
@@ -63,6 +63,8 @@
         <li>Patty</li>
         <li>Frank</li>
         <li>Ann</li>
+        <li>Claudia</li>
+        <li>Robin</li>
       </ul>  
 
       <h3>Find out who you are buying for</h3>
@@ -115,6 +117,8 @@
           "patty": "fox77",
           "ann": "frog30",
           "frank": "rooster16",
+          "claudia": "badger86",
+          "robin": "buffalo77"
         }
 
         if(nameCorrected in passwords && password === passwords[nameCorrected]){
